# malloc

./: CMakeLists.txt  INFO  Makefile  main.c  show_alloc_mem.c  test  test.c  test0  test0.c  test1  test1.c  test2  test2.c
include/: internal.h  malloc.h
sources/: calloc.c  free.c  ft_putnbr.c  ft_putstr.c  ft_tools_malloc.c  ft_tools_number.c  ft_tools_realloc.c  ft_tools_string.c  malloc.c  mem.c  mutex.c  realloc.c  realloc_tools.c  reallocf.c  show_alloc_mem.c
tests/: mmap  mmap.c  test0.c  test1.c  test2.c  test3.c  test3b.c  test4.c  test5.c  test6.c
